vapigen: Use install-data-hook for .pc file symbolic link
The $(pkgconfigdir) may not have been created when we're just in
the install-exec phase.

--- a/vapigen/Makefile.am
+++ b/vapigen/Makefile.am
@@ -91,6 +91,8 @@ if ENABLE_UNVERSIONED
 install-exec-hook:
 	cd $(DESTDIR)$(bindir) && $(LN_S) -f vapigen@PACKAGE_SUFFIX@$(EXEEXT) vapigen$(EXEEXT)
 	cd $(DESTDIR)$(bindir) && $(LN_S) -f vapicheck@PACKAGE_SUFFIX@$(EXEEXT) vapicheck$(EXEEXT)
+
+install-data-hook:
 	cd $(DESTDIR)$(pkgconfigdir) && $(LN_S) -f vapigen@PACKAGE_SUFFIX@.pc vapigen.pc
 endif
 
