Add support for vala 0.15.1

--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -26,6 +26,10 @@ if HAVE_LIBVALA_0_14_X
 DRIVER_0_14_X_DIR = 0.14.x
 endif
 
+if HAVE_LIBVALA_0_15_0
+DRIVER_0_16_X_DIR = 0.16.x
+endif
+
 if HAVE_LIBVALA_0_16_X
 DRIVER_0_16_X_DIR = 0.16.x
 endif
