--- a/configure.in
+++ b/configure.in
@@ -62,10 +62,16 @@ AC_SUBST(LIBGDKPIXBUF_LIBS)
 ## Drivers:
 ##
 
-PKG_CHECK_MODULES(LIBVALA_0_16_X, libvala-0.16 >= 0.14.0, have_libvala_0_16_x="yes", have_libvala_0_16_x="no")
+PKG_CHECK_MODULES(LIBVALA_0_16_X, libvala-0.16 >= 0.15.1, have_libvala_0_16_x="yes", have_libvala_0_16_x="no")
 AM_CONDITIONAL(HAVE_LIBVALA_0_16_X, test "$have_libvala_0_16_x" = "yes")
 AC_SUBST(LIBVALA_0_16_X_CFLAGS)
 AC_SUBST(LIBVALA_0_16_X_LIBS)
+
+
+PKG_CHECK_MODULES(LIBVALA_0_15_0, libvala-0.16 = 0.15.0, have_libvala_0_15_0="yes", have_libvala_0_15_0="no")
+AM_CONDITIONAL(HAVE_LIBVALA_0_15_0, test "$have_libvala_0_15_0" = "yes")
+AC_SUBST(LIBVALA_0_15_0_CFLAGS)
+AC_SUBST(LIBVALA_0_15_0_LIBS)
 
 
 PKG_CHECK_MODULES(LIBVALA_0_14_X, libvala-0.14 >= 0.13.2, have_libvala_0_14_x="yes", have_libvala_0_14_x="no")
