--- a/src/driver/0.16.x/Makefile.am
+++ b/src/driver/0.16.x/Makefile.am
@@ -5,11 +5,17 @@ NULL =
 VERSIONED_VAPI_DIR=`pkg-config libvala-0.16 --variable vapidir`
 
 
+if HAVE_LIBVALA_0_15_0
+VALA_FLAGS = -D VALA_0_15_0
+endif
+
+
 AM_CFLAGS =  -g \
 	-DPACKAGE_ICONDIR=\"$(datadir)/valadoc/icons/\" \
 	-I ../../libvaladoc/ \
 	$(GLIB_CFLAGS) \
 	$(LIBGEE_CFLAGS) \
+	$(LIBVALA_0_15_0_CFLAGS) \
 	$(LIBVALA_0_16_X_CFLAGS) \
 	$(NULL)
 
@@ -52,6 +58,7 @@ libdriver.vala.stamp: $(libdriver_la_VALASOURCES)
 libdriver_la_LIBADD = \
 	../../libvaladoc/libvaladoc.la \
 	$(GLIB_LIBS) \
+	$(LIBVALA_0_15_0_LIBS) \
 	$(LIBVALA_0_16_X_LIBS) \
 	$(LIBGEE_LIBS) \
 	$(NULL)
