Support initializer list for structs that have a base type
Fixes bug 669580.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -84,6 +84,7 @@ TESTS = \
 	structs/bug660426.vala \
 	structs/bug661945.vala \
 	structs/bug667890.vala \
+	structs/bug669580.vala \
 	delegates/delegates.vala \
 	delegates/bug539166.vala \
 	delegates/bug595610.vala \
