--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -34,11 +34,17 @@ if HAVE_LIBVALA_0_16_X
 DRIVER_0_16_X_DIR = 0.16.x
 endif
 
+if HAVE_LIBVALA_0_18_X
+DRIVER_0_18_X_DIR = 0.18.x
+endif
+
+
 SUBDIRS = \
 	$(DRIVER_0_10_X_DIR) \
 	$(DRIVER_0_12_X_DIR) \
 	$(DRIVER_0_14_X_DIR) \
 	$(DRIVER_0_16_X_DIR) \
+	$(DRIVER_0_18_X_DIR) \
 	$(NULL)
 
 
