--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -34,6 +34,10 @@ if HAVE_LIBVALA_0_16_X
 DRIVER_0_16_X_DIR = 0.16.x
 endif
 
+if HAVE_LIBVALA_0_17_0
+DRIVER_0_18_X_DIR = 0.18.x
+endif
+
 if HAVE_LIBVALA_0_18_X
 DRIVER_0_18_X_DIR = 0.18.x
 endif
