codegen: Fix variadic constructors
Fixes bug 620675.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -111,6 +111,7 @@ TESTS = \
 	objects/bug597161.vala \
 	objects/bug613486.vala \
 	objects/bug613840.vala \
+	objects/bug620675.vala \
 	objects/bug620706.vala \
 	objects/bug624594.vala \
 	objects/bug626038.vala \
