rest-0.7: add deps file with gio-2.0

--- a/vapi/Makefile.am
+++ b/vapi/Makefile.am
@@ -210,6 +210,7 @@ dist_vapi_DATA = \
 	rest-0.6.vapi \
 	rest-extras-0.6.deps \
 	rest-extras-0.6.vapi \
+	rest-0.7.deps \
 	rest-0.7.vapi \
 	sdl.vapi \
 	sdl-gfx.vapi \
