libpeas-1.0: add deps file

--- a/vapi/Makefile.am
+++ b/vapi/Makefile.am
@@ -168,6 +168,7 @@ dist_vapi_DATA = \
 	libosso.vapi \
 	libpanelapplet-2.0.deps \
 	libpanelapplet-2.0.vapi \
+	libpeas-1.0.deps \
 	libpeas-1.0.vapi \
 	libpq.vapi \
 	librsvg-2.0.vapi \
