--- a/src/driver/0.18.x/Makefile.am
+++ b/src/driver/0.18.x/Makefile.am
@@ -9,6 +9,9 @@ if HAVE_LIBVALA_0_17_0
 VALA_FLAGS = -D VALA_0_17_0
 endif
 
+if HAVE_LIBVALA_0_17__1_3
+VALA_FLAGS = -D VALA_0_17__1_3
+endif
 
 
 AM_CFLAGS =  -g \
@@ -17,6 +20,7 @@ AM_CFLAGS =  -g \
 	$(GLIB_CFLAGS) \
 	$(LIBGEE_CFLAGS) \
 	$(LIBVALA_0_18_X_CFLAGS) \
+	$(LIBVALA_0_17__1_3_CFLAGS) \
 	$(LIBVALA_0_17_1_CFLAGS) \
 	$(LIBVALA_0_17_0_CFLAGS) \
 	$(NULL)
@@ -61,6 +65,7 @@ libdriver_la_LIBADD = \
 	../../libvaladoc/libvaladoc.la \
 	$(GLIB_LIBS) \
 	$(LIBVALA_0_18_X_LIBS) \
+	$(LIBVALA_0_17__1_3_LIBS) \
 	$(LIBVALA_0_17_1_LIBS) \
 	$(LIBVALA_0_17_0_LIBS) \
 	$(LIBGEE_LIBS) \
