--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -38,6 +38,10 @@ if HAVE_LIBVALA_0_17_0
 DRIVER_0_18_X_DIR = 0.18.x
 endif
 
+if HAVE_LIBVALA_0_17__1_3
+DRIVER_0_18_X_DIR = 0.18.x
+endif
+
 if HAVE_LIBVALA_0_18_X
 DRIVER_0_18_X_DIR = 0.18.x
 endif
