Test symbol resolution in closures

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -35,6 +35,7 @@ TESTS = \
 	namespaces.vala \
 	methods/lambda.vala \
 	methods/closures.vala \
+	methods/symbolresolution.vala \
 	methods/bug595538.vala \
 	methods/bug596726.vala \
 	methods/bug597426.vala \
