Add tests for libvaladoc/parser and gtkdoc-scanner

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -16,6 +16,12 @@ TESTS_ENVIRONMENT = EXEEXT=$(EXEEXT) $(srcdir)/testrunner.sh
 
 TESTS = \
 	libvaladoc/errorreporter.vala \
+	libvaladoc/gtkdoc-scanner.vala \
+	libvaladoc/parser/manyrule.vala \
+	libvaladoc/parser/oneofrule.vala \
+	libvaladoc/parser/sequencerule.vala \
+	libvaladoc/parser/optionalrule.vala \
+	libvaladoc/parser/stubrule.vala \
 	$(NULL)
 
 check-TESTS: $(TESTS)
