--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -127,6 +127,7 @@ TESTS = \
 	objects/bug663134.vala \
 	objects/bug664529.vala \
 	objects/bug667668.vala \
+	objects/bug683646.vala \
 	errors/errors.vala \
 	errors/bug567181.vala \
 	errors/bug579101.vala \
