add libgnome-menu-3.0 bindings

--- a/vapi/Makefile.am
+++ b/vapi/Makefile.am
@@ -178,6 +178,7 @@ dist_vapi_DATA = \
 	libglade-2.0.vapi \
 	libgnome-2.0.vapi \
 	libgnome-menu.vapi \
+	libgnome-menu-3.0.vapi \
 	libgnomeui-2.0.deps \
 	libgnomeui-2.0.vapi \
 	libgsf-1.deps \
@@ -376,6 +377,7 @@ GIR_BINDINGS = \
 	gudev-1.0 \
 	json-glib-1.0 \
 	libgdata \
+	libgnome-menu-3.0.vapi \
 	libpeas-1.0 \
 	libsoup-2.4 \
 	libwnck-3.0 \
@@ -628,6 +630,9 @@ libgnome-2.0:
 
 libgnome-menu:
 	$(GENVAPI) --library $(srcdir)/libgnome-menu $(PACKAGESDIR)/libgnome-menu/libgnome-menu-custom.vala $(PACKAGESDIR)/libgnome-menu/libgnome-menu.gi
+
+libgnome-menu-3.0:
+	$(GENVAPI) --library $(srcdir)/libgnome-menu-3.0 --metadatadir $(METADATADIR) --pkg gio-unix-2.0 --pkg gtk+-3.0 $(GIRDIR)/GMenu-3.0.gir
 
 libgnomeui-2.0:
 	$(GENVAPI) --library $(srcdir)/libgnomeui-2.0 $(PACKAGESDIR)/libgnomeui-2.0/libgnomeui-2.0-custom.vala $(PACKAGESDIR)/libgnomeui-2.0/libgnomeui-2.0.gi
