Set correct parent_statement for MemberInitializer
Fixes bug 603056.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -71,6 +71,7 @@ TESTS = \
 	structs/bug583603.vala \
 	structs/bug595587.vala \
 	structs/bug596144.vala \
+	structs/bug603056.vala \
 	structs/bug606202.vala \
 	structs/bug609642.vala \
 	structs/bug613513.vala \
