Fix build for Windows
- Replace POSIX calls for spawning process with functions from Windows
  API when compiling for Windows
- Add EXEEXT to valac and vapigen paths
- Remove EXEEXT from scripts

Fixes bug 685180.

--- a/Makefile.am
+++ b/Makefile.am
@@ -47,7 +47,7 @@ libvala@PACKAGE_SUFFIX@.pc: libvala.pc
 .PHONY: bootstrap
 bootstrap: all
 	find $(top_srcdir) -name "*.vala.stamp" | xargs rm -f
-	$(MAKE) $(AM_MAKEFLAGS) all VALAC=$(abs_top_builddir)/compiler/valac V=$V
+	$(MAKE) $(AM_MAKEFLAGS) all VALAC=$(abs_top_builddir)/compiler/valac$(EXEEXT) V=$V
 
 .PHONY: test
 test:
