--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -167,6 +167,7 @@ TESTS = \
 	dbus/async-errors.test \
 	dbus/signals.test \
 	dbus/filedescriptor.test \
+	dbus/dicts.test \
 	dbus/bug596862.vala \
 	dbus/bug602003.test \
 	gir/bug651773.test \
