--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -46,6 +46,10 @@ if HAVE_LIBVALA_0_18_X
 DRIVER_0_18_X_DIR = 0.18.x
 endif
 
+if HAVE_LIBVALA_0_20_X
+DRIVER_0_20_X_DIR = 0.20.x
+endif
+
 
 SUBDIRS = \
 	$(DRIVER_0_10_X_DIR) \
@@ -53,6 +57,7 @@ SUBDIRS = \
 	$(DRIVER_0_14_X_DIR) \
 	$(DRIVER_0_16_X_DIR) \
 	$(DRIVER_0_18_X_DIR) \
+	$(DRIVER_0_20_X_DIR) \
 	$(NULL)
 
 
