codegen: Use equal method of base-struct for derived structs
https://bugzilla.gnome.org/show_bug.cgi?id=690380

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -88,6 +88,7 @@ TESTS = \
 	structs/bug667890.vala \
 	structs/bug669580.vala \
 	structs/bug685177.vala \
+	structs/bug690380.vala \
 	delegates/delegates.vala \
 	delegates/bug539166.vala \
 	delegates/bug595610.vala \
