codegen: use #if GLIB_CHECK_VERSION for init functions
Tarballs with generated code should compile without warnings, and work
with various versions of glib (assuming the rest of the code is
correctly up to date, which is often the case if you don't use newer
functions)

https://bugzilla.gnome.org/show_bug.cgi?id=692218

--- a/ccode/Makefile.am
+++ b/ccode/Makefile.am
@@ -46,6 +46,7 @@ libvalaccode_la_VALASOURCES = \
 	valaccodeinvalidexpression.vala \
 	valaccodelabel.vala \
 	valaccodelinedirective.vala \
+	valaccodeifsection.vala \
 	valaccodemacroreplacement.vala \
 	valaccodememberaccess.vala \
 	valaccodemodifiers.vala \
