--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -118,6 +118,7 @@ TESTS = \
 	structs/bug685177.vala \
 	structs/bug686190.vala \
 	structs/bug690380.vala \
+	structs/bug694140.vala \
 	structs/bug749952.vala \
 	structs/bug775761.vala \
 	delegates/delegates.vala \
