--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -130,6 +130,7 @@ TESTS = \
 	structs/bug685177.vala \
 	structs/bug686190.vala \
 	structs/bug690380.vala \
+	structs/bug694140.vala \
 	structs/bug749952.vala \
 	structs/bug775761.vala \
 	structs/bug777194.vala \
