Add support for Gtk widget templates. Created a new codegen gtkmodule.

--- a/codegen/Makefile.am
+++ b/codegen/Makefile.am
@@ -36,6 +36,7 @@ libvala_la_VALASOURCES = \
 	valagerrormodule.vala \
 	valagirwriter.vala \
 	valagobjectmodule.vala \
+	valagtkmodule.vala \
 	valagsignalmodule.vala \
 	valagtypemodule.vala \
 	valagvariantmodule.vala \
