codegen: Support non-auto property initializer in gobjects
Fixes bug 701978

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -135,6 +135,7 @@ TESTS = \
 	objects/bug667668.vala \
 	objects/bug683646.vala \
 	objects/bug695671.vala \
+	objects/bug701978.vala \
 	errors/errors.vala \
 	errors/bug567181.vala \
 	errors/bug579101.vala \
