--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -27,6 +27,7 @@ TESTS = \
 	drivers/driver-0-16.vala \
 	drivers/driver-0-18.vala \
 	drivers/driver-0-20.vala \
+	drivers/driver-0-22.vala \
 	$(NULL)
 
 check-TESTS: $(TESTS)
