--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -136,6 +136,7 @@ TESTS = \
 	objects/bug683646.vala \
 	objects/bug695671.vala \
 	objects/bug701978.vala \
+	objects/bug702736.vala \
 	errors/errors.vala \
 	errors/bug567181.vala \
 	errors/bug579101.vala \
