codegen: Allow scope=async delegates to be used in vala code
Fixes bug 703804

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -98,6 +98,7 @@ TESTS = \
 	delegates/bug595639.vala \
 	delegates/bug638415.vala \
 	delegates/bug639751.vala \
+	delegates/bug703804.vala \
 	objects/classes.vala \
 	objects/fields.vala \
 	objects/interfaces.vala \
