Add support for the \uXXXX escape sequence
An additional checks to validate the escape sequences \xYY and \uYYYY
were added, where Y represents a hex digit.
https://bugzilla.gnome.org/show_bug.cgi?id=704709

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -16,6 +16,7 @@ TESTS_ENVIRONMENT = EXEEXT=$(EXEEXT) CFLAGS='$(CFLAGS)' CPPFLAGS='$(CPPFLAGS)' L
 
 TESTS = \
 	basic-types/integers.vala \
+	basic-types/escape-chars.vala \
 	basic-types/floats.vala \
 	basic-types/strings.vala \
 	basic-types/arrays.vala \
