gdk-x11-2.0, gdk-x11-3.0: Update using 2.24.20, 3.9.8

--- a/vapi/Makefile.am
+++ b/vapi/Makefile.am
@@ -452,7 +452,7 @@ gdk-pixbuf-2.0:
 	$(GENVAPI) --library $(srcdir)/gdk-pixbuf-2.0 --pkg gio-2.0 --metadatadir $(METADATADIR) $(METADATADIR)/GdkPixbuf-2.0-custom.vala $(GIRDIR)/GdkPixbuf-2.0.gir
 
 gdk-x11-2.0:
-	$(GENVAPI) --library $(srcdir)/gdk-x11-2.0 $(PACKAGESDIR)/gdk-x11-2.0/gdk-x11-2.0.gi
+	$(GENVAPI) --library $(srcdir)/gdk-x11-2.0 $(PACKAGESDIR)/gdk-x11-2.0/gdk-x11-2.0-custom.vala $(PACKAGESDIR)/gdk-x11-2.0/gdk-x11-2.0.gi
 
 gdk-x11-3.0:
 	$(GENVAPI) --library $(srcdir)/gdk-x11-3.0 $(PACKAGESDIR)/gdk-x11-3.0/gdk-x11-3.0.gi
