codegen: Inherit array_{length,null_terminated} from base parameter
First commit to start inheriting ccode attributes of parameters
from base parameters of base methods.

Partially fixes bug 642885.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -48,6 +48,7 @@ TESTS = \
 	methods/bug620673.vala \
 	methods/bug622570.vala \
 	methods/bug639054.vala \
+	methods/bug642885.vala \
 	methods/bug642899.vala \
 	methods/bug646345.vala \
 	methods/bug648320.vala \
