clutter-gst-1.0/2.0: Update to 1.6.0/2.0.8

--- a/vapi/Makefile.am
+++ b/vapi/Makefile.am
@@ -23,6 +23,8 @@ dist_vapi_DATA = \
 	clutter-1.0.vapi \
 	clutter-gst-1.0.deps \
 	clutter-gst-1.0.vapi \
+	clutter-gst-2.0.deps \
+	clutter-gst-2.0.vapi \
 	clutter-gtk-0.10.deps \
 	clutter-gtk-0.10.vapi \
 	clutter-gtk-1.0.deps \
@@ -377,6 +379,8 @@ GIR_BINDINGS = \
 	atspi-2 \
 	clutter-1.0 \
 	clutter-gtk-1.0 \
+	clutter-gst-1.0 \
+	clutter-gst-2.0 \
 	cogl-pango-1.0 \
 	gdk-3.0 \
 	gdk-pixbuf-2.0 \
@@ -438,6 +442,12 @@ clutter-gtk-0.10:
 
 clutter-gtk-1.0:
 	$(GENVAPI) --library $(srcdir)/clutter-gtk-1.0 --metadatadir $(METADATADIR) $(METADATADIR)/GtkClutter-1.0-custom.vala --pkg clutter-1.0 --pkg gtk+-3.0 --pkg cogl-pango-1.0 $(GIRDIR)/GtkClutter-1.0.gir
+
+clutter-gst-1.0:
+	$(GENVAPI) --library $(srcdir)/clutter-gst-1.0 --metadatadir $(METADATADIR) $(METADATADIR)/ClutterGst-1.0-custom.vala --pkg clutter-1.0 --pkg gstreamer-base-0.10 --pkg gstreamer-video-0.10 gstreamer-interfaces-0.10.vapi $(GIRDIR)/ClutterGst-1.0.gir
+
+clutter-gst-2.0:
+	$(GENVAPI) --library $(srcdir)/clutter-gst-2.0 --metadatadir $(METADATADIR) $(METADATADIR)/ClutterGst-2.0-custom.vala --pkg cogl-1.0 --pkg clutter-1.0 --pkg gstreamer-base-1.0 --pkg gstreamer-video-1.0 $(GIRDIR)/ClutterGst-2.0.gir
 
 cogl-1.0:
 	$(GENVAPI) --library $(srcdir)/cogl-1.0 $(PACKAGESDIR)/cogl-1.0/cogl-1.0-custom.vala $(PACKAGESDIR)/cogl-1.0/cogl-1.0.gi
