--- a/configure.ac
+++ b/configure.ac
@@ -55,7 +55,7 @@ AC_SUBST(LIBGEE_LIBS)
 
 AC_MSG_CHECKING([for CGRAPH])
 valadoc_tmp_LIBADD="$LIBADD"
-valadoc_tmp_CFLAGS="$CFLAGGS"
+valadoc_tmp_CFLAGS="$CFLAGS"
 LIBADD="$LIBADD $LIBGVC_LIBS"
 CFLAGS="$CFLAGS $LIBGVC_CFLAGS"
 AC_RUN_IFELSE(
